--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "context",
+  "name": "next-js-context",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": {
+    "name": "Oseh Mathias",
+    "email": "o@matmail.me"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +13,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.2",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
+    "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
